update scaling issue and adding canvas explorer

--- a/images/explorer/src/index.html
+++ b/images/explorer/src/index.html
@@ -6,9 +6,7 @@
   <link href="style/style.css" rel="stylesheet" />
 </head>
 <body>
-  <div id="container">
-
-  </div>
+  <canvas id="container"></canvas>
   <script src="index.js" type="module"></script>
 </body>
 </html>
