added visual to mechanical image

--- a/images/mechanical/src/static/index.html
+++ b/images/mechanical/src/static/index.html
@@ -35,6 +35,19 @@
     </div>
     <div id="rightLane">
       <div id="visualContainer">
+      <h1>Mechanical Turker</h1>
+        <h2>Work done: <span id="percentage"></span></h2>
+            <canvas id="canvas"> </canvas>
+
+        <table id="last-items">
+            <tr>
+                <th>ITEM</th>
+                <th>COLLECTION</th>
+                <th>TIMESTAMP</th>
+                <th>WORKER</th>
+                <th>VERIFIED</th>
+            <tr>
+        </table>
       </div>
       <div id="workerInfo">
         <h1>Worker ID: <span id="workerUUIDHolder">NULL</span></h1>
