--- a/images/touch/servable/index.html
+++ b/images/touch/servable/index.html
@@ -4,10 +4,12 @@
   <title>Collage van Gent</title>
   <link href="style/reset.css" rel="stylesheet" />
   <link href="style/style.css" rel="stylesheet" />
+  <link href="style/icon.css" rel="stylesheet" />
       <meta charset="UTF-8" />
 
 </head>
 <body>
+  <a id="panicBtn"><div class="gg-danger"></div></a>
   <div id="canvasContainer">
     <canvas class="canvas" id="pickCanvas"></canvas>
     <canvas class="canvas" id="cutCanvas"></canvas>
