hide minimap on startup

--- a/images/touch/servable/index.html
+++ b/images/touch/servable/index.html
@@ -15,6 +15,9 @@
     <canvas class="canvas" id="cutCanvas"></canvas>
     <canvas class="canvas" id="placeCanvas"></canvas>
     <canvas class="canvas" id="viewCanvas"></canvas>
+    
+    <div id="minimap"></div>
+    <div id="marker"></div>
   </div>
   <div id="headerContainer"> </div>
   <div id="infoContainer"></div>
