update projection to include instructions

--- a/images/projection/servable/index.html
+++ b/images/projection/servable/index.html
@@ -12,7 +12,10 @@
   <div id="canvasContainer">
     <canvas class="canvas" id="viewCanvas"></canvas>
   </div>
-
+  <div id="ctaText">
+    <h1>Draag bij aan de collage!</h1>
+    <p>Gebruik het touch display om een fragment te selecteren, uit te knippen en te plaatsen in de collage.</p>
+    </div>
 <script src="https://cdn.socket.io/4.6.0/socket.io.min.js" integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+" crossorigin="anonymous"></script>
   <script src="bundle.js" type="module"></script>
 </body>
