--- a/images/touch/src/index.html
+++ b/images/touch/src/index.html
@@ -16,6 +16,11 @@
   </div>
   <div id="headerContainer"> </div>
   <div id="infoContainer"></div>
+  <div id="instructionContainer">
+    <div id="instruction">
+      <p>Teken rond de figuur die je wil uitsnijden, het blauwe vlak zal de uitgesneden vorm bepalen.</p>
+    </div>
+  </div>
   <script src="main.js" type="module"></script>
 </body>
 </html>
