adding even more clear instructions

--- a/images/touch/servable/index.html
+++ b/images/touch/servable/index.html
@@ -16,8 +16,9 @@
     <canvas class="canvas" id="placeCanvas"></canvas>
     <canvas class="canvas" id="viewCanvas"></canvas>
   </div>
-  <div id="headerContainer"> </div>
+  <div id="headerContainer"></div>
   <div id="infoContainer"></div>
+  <div id="instructionContainer"></div>
   <script src="bundle.js" type="module"></script>
 </body>
 </html>
